--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <h1>HOT AVATAR LEAKS!</h1>
-        <img src="https://static.wikia.nocookie.net/megamitensei/images/c/c1/Smt1chaosherootheroldart.jpg/revision/latest?cb=20130802041922" width="200" height="200">
-        <img src="https://static.wikia.nocookie.net/megamitensei/images/4/46/Naoki_Kashima_render.png/revision/latest?cb=20220203043547" width="200" height="200">
-        <img src="https://static.wikia.nocookie.net/megamitensei/images/5/59/Phantom_render.png/revision/latest?cb=20160729154419" width="200" height="200">
+        <img src="https://i.pinimg.com/originals/ab/78/a4/ab78a47ddb109c1e29aba293a1b1e03d.jpg" width="200" height="200">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.nLrLbNiRXMH57s2A9XsaDAHaJ6%26pid%3DApi&f=1" width="200" height="200">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.-_pToR-T-Jyru2wMmuU5iwHaEc%26pid%3DApi&f=1" width="200" height="200">
         <h1>HOT BOX ART</h1>
         <img src="https://cdn.discordapp.com/attachments/929462775372210178/997318029803266139/PERSONA5_PS4_box_art.webp" width="200" height="200">
         <h1>HOT SPINOFF</h1>
